[gd_scene load_steps=36 format=3 uid="uid://cm1kk7fl1jtqd"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_8kf3r"]
[ext_resource type="Resource" uid="uid://cgg7wit8qtreu" path="res://Resources/Guns/Machine_gun.tres" id="2_6ecqg"]
[ext_resource type="Texture2D" uid="uid://cs5fxbt0w15fb" path="res://Sprites/Player/Temp_character_spritesheet.png" id="2_ngyrq"]
[ext_resource type="Resource" uid="uid://7fhe6gupp5ys" path="res://Resources/Guns/Drill.tres" id="3_jyuny"]
[ext_resource type="Script" path="res://Player/Gun.gd" id="4_koxme"]
[ext_resource type="Texture2D" uid="uid://v7iy0etlfafx" path="res://Sprites/Weapons/Gun.png" id="5_lbhw0"]
[ext_resource type="Script" path="res://Player/Muzzle.gd" id="7_6pfxh"]
[ext_resource type="Script" path="res://Player/ReloadProgressBar.gd" id="7_45pkp"]
[ext_resource type="FontFile" uid="uid://bfqjdaot25jm4" path="res://UI/PixeloidSans-mLxMm.ttf" id="8_tuy74"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0714n"]
height = 26.4

[sub_resource type="Animation" id="Animation_4r0j1"]
resource_name = "Move_down"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}

[sub_resource type="Animation" id="Animation_m2c6g"]
resource_name = "Move_left"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}

[sub_resource type="Animation" id="Animation_rbmsw"]
resource_name = "Move_right"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_ms4pq"]
resource_name = "Move_up"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [6, 7]
}

[sub_resource type="Animation" id="Animation_uhdj8"]
resource_name = "Stand_down"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [12, 13]
}

[sub_resource type="Animation" id="Animation_c4tsl"]
resource_name = "Stand_left"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [10, 11]
}

[sub_resource type="Animation" id="Animation_a58jv"]
resource_name = "Stand_right"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 9]
}

[sub_resource type="Animation" id="Animation_fw20l"]
resource_name = "Stand_up"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d261l"]
_data = {
"Move_down": SubResource("Animation_4r0j1"),
"Move_left": SubResource("Animation_m2c6g"),
"Move_right": SubResource("Animation_rbmsw"),
"Move_up": SubResource("Animation_ms4pq"),
"Stand_down": SubResource("Animation_uhdj8"),
"Stand_left": SubResource("Animation_c4tsl"),
"Stand_right": SubResource("Animation_a58jv"),
"Stand_up": SubResource("Animation_fw20l")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vi0cg"]
animation = &"Stand_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ufi0b"]
animation = &"Stand_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_flhdg"]
animation = &"Stand_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_n18ly"]
animation = &"Stand_down"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_muika"]
blend_point_0/node = SubResource("AnimationNodeAnimation_vi0cg")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_ufi0b")
blend_point_1/pos = Vector2(0.8, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_flhdg")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_n18ly")
blend_point_3/pos = Vector2(0, 1)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_e32xr"]
animation = &"Move_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dnmab"]
animation = &"Move_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5exig"]
animation = &"Move_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_a3rc1"]
animation = &"Move_down"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_v1dll"]
blend_point_0/node = SubResource("AnimationNodeAnimation_e32xr")
blend_point_0/pos = Vector2(-0.9, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_dnmab")
blend_point_1/pos = Vector2(0.9, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_5exig")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_a3rc1")
blend_point_3/pos = Vector2(0, 1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4bise"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ixuti"]
advance_mode = 2
advance_condition = &"is_walking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dq404"]
advance_mode = 2
advance_condition = &"is_idle"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_pctbh"]
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_muika")
states/Idle/position = Vector2(371, 100)
states/Start/position = Vector2(219, 100)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_v1dll")
states/Walk/position = Vector2(544, 100)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_4bise"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_ixuti"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_dq404")]

[sub_resource type="LabelSettings" id="LabelSettings_7upxg"]
line_spacing = 0.0
font = ExtResource("8_tuy74")
font_size = 18

[sub_resource type="CircleShape2D" id="CircleShape2D_oqal6"]
radius = 70.2026

[node name="Player" type="CharacterBody2D" groups=["player"]]
scale = Vector2(5, 5)
collision_mask = 5
script = ExtResource("1_8kf3r")
weapons = Array[Resource("res://Resources/Guns/Gun_data.gd")]([ExtResource("2_6ecqg"), ExtResource("3_jyuny")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.1, 5)
shape = SubResource("CapsuleShape2D_0714n")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ngyrq")
hframes = 4
vframes = 4
frame = 14

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_d261l")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_d261l")
}
tree_root = SubResource("AnimationNodeStateMachine_pctbh")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/is_idle = false
parameters/conditions/is_walking = false
parameters/Idle/blend_position = Vector2(-1.008, -0.0131004)
parameters/Walk/blend_position = Vector2(-0.64, -0.0658683)

[node name="Gun" type="Sprite2D" parent="."]
position = Vector2(3.55271e-15, 6.2)
texture = ExtResource("5_lbhw0")
script = ExtResource("4_koxme")

[node name="Marker2D" type="Marker2D" parent="Gun"]
position = Vector2(15, 0)
script = ExtResource("7_6pfxh")

[node name="Timer_between_shots" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Timer_reload" type="Timer" parent="."]
one_shot = true

[node name="Timer_fuel" type="Timer" parent="."]
autostart = true

[node name="Timer_Rage" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
scale = Vector2(0.2, 0.2)

[node name="Label" type="Label" parent="Control"]
layout_mode = 2
offset_left = -44.0
offset_top = -65.0
offset_right = 16.0
offset_bottom = -39.0
scale = Vector2(1.5, 1.5)
text = "20/20"
label_settings = SubResource("LabelSettings_7upxg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReloadProgressBar" type="ProgressBar" parent="Control"]
layout_mode = 0
offset_left = -55.0
offset_top = -99.0
offset_right = 57.0
offset_bottom = -72.0
theme_override_fonts/font = ExtResource("8_tuy74")
theme_override_font_sizes/font_size = 27
script = ExtResource("7_45pkp")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 5.6)
shape = SubResource("CircleShape2D_oqal6")

[node name="I-Frames" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="change_offset" from="." to="Gun/Marker2D" method="_on_player_change_offset"]
[connection signal="timeout" from="Timer_reload" to="." method="_on_timer_reload_timeout"]
[connection signal="timeout" from="Timer_fuel" to="." method="_on_timer_fuel_timeout"]
[connection signal="timeout" from="Timer_Rage" to="." method="_on_timer_rage_timeout"]
